gallery images gap fixed mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1933,15 +1933,16 @@ header {
     }
     .small-img1 img{
         width: 200px;
-        height: 120px;
-        margin: 50px;
+        height: 130px;
+        margin: 30px;
         margin-top: 0;
+        margin-bottom: 30px;
         border-radius: 15px;
     }
     .small-img2 img{
         width: 200px;
-        height: 120px;
-        margin: 50px;
+        height: 130px;
+        margin-bottom: 30px;
         margin-top: 0;
         border-radius: 15px;
     }
